Fixed broken var in truncation code on dataset pg, other code clean up [ref #6685]

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -628,11 +628,17 @@ div.edit-field div.ui-message {margin:6px 0;}
 .metadata-container table.metadata th {width:25%;vertical-align:top;padding:6px 12px;}
 .metadata-container table.metadata td {padding:6px 12px;vertical-align:top;}
 
-/* TO-DO FIX max-width:1199px FOR SUMMARY BLOCK ONLY, NOT OTHER PAGES */
+/* STACK METADATA TABLE LABELS + VALUES FOR SM, XS */
+@media(max-width:767px){
+    .metadata-container:not(#dataset-summary-metadata) table.metadata th, .metadata-container:not(#dataset-summary-metadata) table.metadata td {display:block;width:100%;}
+    .metadata-container:not(#dataset-summary-metadata) table.metadata th {padding-bottom:0;}
+    .metadata-container:not(#dataset-summary-metadata) table.metadata td {padding-left:30px;}
+}
+/* STACK METADATA TABLE LABELS + VALUES FOR MD, SM, XS ... DATASET-SUMMARY-BLOCK ONLY */
 @media(max-width:1199px){
-    .metadata-container table.metadata th, .metadata-container table.metadata td {display:block;width:100%;}
-    .metadata-container table.metadata th {padding-bottom:0;}
-    .metadata-container table.metadata td {padding-left:30px;}
+    #dataset-summary-metadata.metadata-container table.metadata th, #dataset-summary-metadata.metadata-container table.metadata td {display:block;width:100%;}
+    #dataset-summary-metadata.metadata-container table.metadata th {padding-bottom:0;}
+    #dataset-summary-metadata.metadata-container table.metadata td {padding-left:30px;}
 }
 .panel-body.metadata-container {padding:15px 0;}
 .metadata-logo {max-width:180px;max-height:40px;}
@@ -646,6 +652,9 @@ div.edit-field div.ui-message {margin:6px 0;}
 .metadata-container pre {
     white-space: pre-wrap !important;
 }
+/* TRUNCATION */
+div.more-fade-block {text-align:center; padding-top:250px; width:100%; position:absolute; bottom:0; background:linear-gradient(180deg,hsla(0,0%,100%,0),#fff 80%);}
+button.desc-more-link {margin:0; padding:0;}
 
 /* Primefaces vs Bootstrap selectOneMenu fix */
 div.ui-selectonemenu.form-control {padding:0px;}
